--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.12.2",
     "json-server": "^1.0.0-beta.3",
+    "leaflet": "^1.9.4",
     "lucide": "^0.546.0",
     "lucide-react": "^0.546.0",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
