--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "leaflet": "^1.9.4",
     "lucide": "^0.546.0",
     "lucide-react": "^0.546.0",
+    "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.16",
     "zod": "^4.1.12"
   },
